[gd_scene load_steps=4 format=3 uid="uid://cluue5kyaytsq"]

[ext_resource type="Script" path="res://settings/settings_window.gd" id="1_ff5r0"]
[ext_resource type="PackedScene" uid="uid://2eewjl0nd8t5" path="res://settings/display.tscn" id="2_ciu6t"]
[ext_resource type="Script" path="res://settings/finder.gd" id="3_fw0md"]

[node name="Window" type="Window"]
gui_embed_subwindows = true
size = Vector2i(640, 480)
unresizable = true
script = ExtResource("1_ff5r0")

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Display" parent="TabContainer" instance=ExtResource("2_ciu6t")]
visible = false
layout_mode = 2

[node name="Finder" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("3_fw0md")

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Finder"]
layout_mode = 2

[node name="ItemList" type="ItemList" parent="TabContainer/Finder/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
item_count = 2
item_0/text = "text"
item_1/text = "test"

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Finder/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MenuButton" type="MenuButton" parent="TabContainer/Finder/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Insert Built-in"
flat = false
switch_on_hover = true
item_count = 2
popup/item_0/text = "if not empty : End Find"
popup/item_0/id = 0
popup/item_1/text = "Default lyrics file finder"
popup/item_1/id = 1

[node name="Button" type="Button" parent="TabContainer/Finder/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Delete"

[node name="Control" type="Control" parent="TabContainer/Finder/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Finder/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="TabContainer/Finder/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "up"

[node name="Button2" type="Button" parent="TabContainer/Finder/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "down"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="files_dropped" from="." to="." method="_on_files_dropped"]
